Hotfix - Fixed font alignment on home page

--- a/src/components/SectionPublicans/SectionPublicans.css
+++ b/src/components/SectionPublicans/SectionPublicans.css
@@ -12,7 +12,11 @@
 .mainTitle {
   color: white;
   line-height: 1.15;
-  font-size: 5rem;
+  font-size: 4rem;
+
+  @media (--viewportMedium) {
+    font-size: 5rem;
+  }
 }
 
 .buttonWrap {
